# DeMartiniDuico-sw2

./: .gitignore  README.md
.github/workflows/: rust-ci.yml
ATD/: ATD.md
DD/: Makefile  commandsFile.tex  main.bib  main.tex
DD/Files/: architecture.tex  effort.tex  interface.tex  introduction.tex  plan.tex  requirements.tex
DD/Images/: component.xml  component2.xml  component2_tb.xml  component_email.xml  deployment.xml  overview.drawio  runtime_booking.txt  runtime_login.txt  runtime_registration.txt  runtime_revproxy.txt  runtime_substitute.txt  runtime_ticket.txt  runtime_tokenvalidate.txt  ux-flowchart.xml  ux-flowchart_staff.xml
DD/api/: Makefile  api.md  api.tex  convert.py  generate.py  openapi.yaml
ITD/: README.md  docker-compose.yml  effort.md  export_containers.sh  generate_certs.sh
ITD/backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  effort.md  sqlx-data.json
ITD/backend/migrations/: 01_init.sql  02_shops.sql  03_staff.sql  04_views.sql  05_index_ticket_creation.sql  06_additional_constraints.sql  99_testvals.sql  init.sql  setup_pg.sh
ITD/backend/src/: api.rs  lib.rs  main.rs  migrations.rs  models.rs  utils.rs
ITD/backend/src/api/: account.rs  dev.rs  generic.rs  shop.rs  staff.rs  ticket.rs
ITD/backend/src/models/: account.rs  customer.rs  persistence.rs  shop.rs  staff.rs  ticket.rs
ITD/backend/src/utils/: encoding.rs  session.rs  tests.rs  time.rs
ITD/backend/templates/: login.html
ITD/backend/test/: test-login.py
ITD/backend/tests/: account_api_test.rs  full_enter_exit_test.rs  get_ticket_test.rs
ITD/backend/tests/common/: mod.rs  requests.rs
ITD/frontend/: Dockerfile  README.md  nginx.conf  package.json  serve.sh  vue.config.js
RASD/: commandsFile.tex  main.tex
RASD/Files/: alloy.tex  effort.tex  introduction.tex  overview.tex  requirements.tex
RASD/Images/: add-shop_sequence_export.pdf_tex  booking-loop_sequence.txt  booking-loop_sequence_export.pdf_tex  (+15 more)
(+44 files in other folders)
