[package]
name = "clup"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0", features =  [ "macros", "rt-multi-thread", "fs", "io-util" ] }
actix-web = "3"
actix-session = "0.4"
actix-redis = "0.9"
sqlx = { version = "0.4", features = ["postgres", "macros", "chrono", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
rand_pcg = "0.3"
rust-argon2 = "0.8"
parking_lot = "0.11"
regex = "1.4"
lazy_static = "1.4"
log = "0.4"
dotenv = "0.15"
pretty_env_logger="0.4"

[dev-dependencies]

[profile.release]
lto = "thin"
opt-level = 2