[package]
name = "clup"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0", features =  [ "macros", "rt-multi-thread", "fs", "io-util" ] }
actix-web = "3"
actix-service = "1.0"
actix-session = "0.4"
actix-redis = "0.9"
actix-cors = "0.5"
sqlx = { version = "0.4", features = ["postgres", "macros", "offline", "chrono", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
rand_pcg = "0.3"
rust-argon2 = "0.8"
# parking_lot = "0.11"
# regex = "1.4"
lazy_static = "1.4"
log = "0.4"
dotenv = "0.15"
pretty_env_logger="0.4"
hex = "0.4"

[dev-dependencies]
image = "0.23"
actix-rt = "1.1"
regex = "1.4"

[profile.release]
# lto = "thin"
opt-level = 2

# [[bin]]
# name = "clup"
# path = "src/bin/main.rs"